# wpctf2024

./: README.md
ai/easy/an-aiusual-reverse/: .gitignore  build.sh  description.txt  flag.txt  flag.xcf
ai/medium/can-i-bring-a-cat/: .gitignore  Dockerfile  build.sh  description.txt  flag.txt
crypto/hard/safe-fileshare/: Dockerfile  build.sh  description.txt  flag.txt  writeup.md
crypto/medium/size-doesnt-matter/: .dockerignore  Dockerfile  build.sh  description.txt  flag.txt  writeup.md
crypto/medium/size-doesnt-matter/challenge/: Cargo.toml
crypto/medium/size-doesnt-matter/challenge/src/: execute.rs  main.rs  memory_format.rs  validate.rs
misc/easy/redacted/: .zipignore  build.sh  exploit.py  flag.txt
misc/medium/party-hard/: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  description.txt  flag.txt  obfuscate_flag.py  run.sh
osint/easy/: README.md  writeup.md
osint/hard/: README.md  writeup.md
pwn/easy/secure-file-scanner/: .gitignore  Dockerfile  Makefile  README.md  build.sh  description.txt  exploit.py  flag.txt  writeup.md
pwn/hard/netflaw/: CMakeLists.txt  Dockerfile  Dockerfile.build  Dockerfile.devel  build.sh  config.c  config.h  csv.c  csv.h  description.txt  main.c  netflow.c  netflow.h  status_data.c  status_data.h  udp_receiver.c  udp_receiver.h  writeup.md
pwn/hard/netflaw/pwninit/: Makefile  config.ini  exploit.py  flag
pwn/medium/secure-file-scanner-v2/: .editorconfig  .gitignore  Dockerfile  Makefile  README.md  build.sh  (+5 more)
warmup/encrypted-echo/: description.txt  exploit.py  flag.txt  requirements.txt  writeup.md
(+154 files in other folders)
